# sogis-dataproduct-service

./: Dockerfile  README.md  dataproduct_service.py  pyproject.toml  requirements.txt  server.py  weblayers_service.py
schemas/: sogis-dataproduct-service.json
src/: server.py  weblayers_service.py
