[project]
name = "sogis-dataproduct-service"
version = "v2025.02.12"
description = "SO!GIS Dataproduct service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.3",
    "werkzeug~=3.0.6",
    "Flask-JWT-Extended~=4.7.1",
    "flask-restx~=1.3.0",
    "qwc-services-core~=1.4.0"
]

[dependency-groups]
dev = [
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
]
